<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <CheckBox
        android:id="@+id/length_known_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/length_checkbox" />

    <LinearLayout
        android:id="@+id/length_picker_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/length_field" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/length"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/character_types"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/letters_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/letters_checkbox" />

        <CheckBox
            android:id="@+id/digits_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/digits_checkbox" />

        <CheckBox
            android:id="@+id/special_characters_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/special_characters_checkbox" />

    </LinearLayout>

</LinearLayout>